# zeitlinse

./: README.md  ZeitLinse.hs  zeitlinse.cabal
src/: ZeitLinse.hs
src/ZeitLinse/: Core.hs  FocalItem.hs
src/ZeitLinse/Core/: TimeSpot.hs  Types.hs  WeightedMerging.hs  ZeitScore.hs
tests/: zeitlinse-tests.hs
tests/ZeitLinse/Core/: Tests.hs
