name:                   zeitlinse
version:                0.0.0.1
synopsis:               Merge ratings from multiple sources
homepage:               https://github.com/tarleb/zeitlinse
license:                AGPL-3
license-file:           COPYING
author:                 Albert Krewinkel
maintainer:             Albert Krewinkel <tarleb@moltkeplatz.de>
copyright:              (c) 2013 Albert Krewinkel
build-type:             Simple
description:
                        Focus your time on the important things.  ZeitLinse
                        will help you to combine your multiple sources in a
                        way that reflects your personal preferences.

extra-source-files:     README.md

cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:      ZeitLinse
                        ZeitLinse.Core.Types
                        ZeitLinse.Core.WeightedMerging
                        ZeitLinse.Core.ZeitScore
                        ZeitLinse.FocalItem

  default-language:     Haskell2010
  other-extensions:     DeriveFunctor,
                        ExistentialQuantification,
                        FlexibleInstances,
                        GeneralizedNewtypeDeriving,
                        OverlappingInstances,
                        StandaloneDeriving

  build-depends:        base            >= 4.5 && < 5,
                        containers      >= 0.4 && < 0.6,
                        time            >= 1.4 && < 2

test-suite zeitlinse-tests
  type:                 exitcode-stdio-1.0
  main-is:              zeitlinse-tests.hs
  hs-source-dirs:       src tests
  default-language:     Haskell2010
  ghc-options:          -Wall
  -- other-modules:        ZeitLinse.Core.Tests

  build-depends:        HUnit           >= 1.2 && < 1.3,
                        hspec           >= 1.4 && < 1.5,
                        QuickCheck      >= 2.4 && < 2.7,
                        -- copy pasted from library dependencies
                        base            >= 4.5 && < 5,
                        containers      >= 0.4 && < 0.6,
                        time            >= 1.4 && < 2
